--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_AUTOUIC ON)
 
 set(CMAKE_CXX_STANDARD_REQUIRED true)
 set(CMAKE_C_STANDARD_REQUIRED true)
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_C_STANDARD 11)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
@@ -18,7 +18,7 @@ include(FetchContent)
 FetchContent_Declare(
     Corrosion
     GIT_REPOSITORY https://github.com/corrosion-rs/corrosion.git
-    GIT_TAG v0.5 # Optionally specify a commit hash, version tag or branch here
+    GIT_TAG v0.5.2 # Optionally specify a commit hash, version tag or branch here
 )
 # Set any global configuration variables such as `Rust_TOOLCHAIN` before this line!
 FetchContent_MakeAvailable(Corrosion)
@@ -26,9 +26,9 @@ FetchContent_MakeAvailable(Corrosion)
 find_package(Qt6 REQUIRED COMPONENTS Core CoreTools Widgets Concurrent)
 
 corrosion_import_crate(MANIFEST_PATH crates/Cargo.toml
-IMPORTED_CRATES imported_crates
+  IMPORTED_CRATES imported_crates
 )
-message(${imported_crates})
+message("-- Found crates: ${imported_crates}")
 
 target_sources(tokio_ffi_test
   PUBLIC
@@ -46,7 +46,7 @@ set(SOURCES
   src/app.hpp
   src/window.cpp
   src/window.hpp
-  src/main.ui
+  # src/main.ui
 )
 
 add_library(ffitest_core STATIC ${SOURCES})
