fear(exceptions): track thrown exceptions with std::exception_ptr
Signed-off-by: Rachel Powers <508861+Ryex@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ crates/.cache/clangd/index
 crates/target
 crates/compile_commands.json
 crates/ffi/include/task-ffi/generated.h
+crates/ffi/include/task-ffi/zngur_generated.h
