--- a/crates/ffi/Cargo.toml
+++ b/crates/ffi/Cargo.toml
@@ -41,5 +41,7 @@ zngur = "0.7.0"
 # zngur = { git = "https://github.com/HKalbasi/zngur.git", branch = "main" }
 zngur-def = "0.7.0"
 zngur-parser = "0.7.0"
-sailfish = "0.10.0"
 walkdir = "2.5.0"
+tinytemplate = "1.2.1"
+indoc = "2.0.7"
+serde = { version = "1.0.228", features = ["derive"] }
